# datacenter_topology

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py  todo.md
.github/workflows/: lint.yml  python-tests.yml
configs/: 1_SU.yaml
configs/examples/: multi_fabric_backend_frontend.yaml  multi_fabric_backend_frontend_oob.yaml  multi_fabric_small.yaml  three_tier_small.yaml  two_tier_small.yaml
docs/: architecture.md  configuration.md  diagram_visual_refresh_plan.md  examples.md  improvement_roadmap.md  multi_scope_grouping_plan.md
tests/: conftest.py  test_cli_contracts.py  test_config.yaml  test_examples_smoke.py  test_integration.py
tests/unit/: test_argparser.py  test_config_pipeline.py  test_config_schema.py  test_expander.py  test_file_handler.py  test_graph_exporter.py  test_graph_metadata.py  test_logger.py  test_main.py  test_port_mapper.py  test_rendering.py  test_topology_generator.py  test_validator.py  test_visualiser.py
topology_generator/: __init__.py  __main__.py  argparser.py  config_identifiers.py  config_parser.py  config_schema.py  config_types.py  config_validation.py  expander.py  file_handler.py  graph_exporter.py  graph_metadata.py  logger.py  main.py  port_mapper.py  render_drawing.py  render_environment.py  render_formatting.py  render_layout.py  render_types.py  rendering.py  topology_generator.py  validator.py  visualiser.py
topology_generator/output/20250213_121322/: port_mapping.xlsx
topology_generator/output/20250213_121419/: port_mapping.xlsx  topology.vdx
topology_generator/output/20250213_121454/: port_mapping.xlsx
topology_generator/output/20250213_121503/: port_mapping.xlsx
topology_generator/output/20250213_121831/: port_mapping.csv  port_mapping.xlsx
